--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -1,6 +1,14 @@
 // https://coolors.co/170003-55000c-f2f2d9-adb262-69c14c
 
 $colour-mantis: rgb(105,193,76);
+$colour-clementine: rgb(224,142,42);
+$colour-sienna: rgb(183,75,9);
+
+$colour-brand: rgb(204,14,0);
+$colour-brand-on-dark: rgb(255,50,36);
+
+$colour-secondary: rgb(47,116,60);
+$colour-secondary-on-dark: rgb(77,153,92);
 
 $colour-bg-base: rgb(230,230,230);
 $colour-bg-base-demi: rgba(230,230,230,0.8);
